--- a/usage.html
+++ b/usage.html
@@ -36,7 +36,7 @@
 <div class="row">
   <div class="span2 columns"><p>&nbsp;</p></div>
   <div class="span10 columns content">
-    <p>By default, the <code>xsbt-gpg-plugin</code> will use the <code>gpg</code> command line utility. GPG is the GNU project&#8217;s PGP implementation. It provides great support and is available on many platforms. The <code>xsbt-gpg-plugin</code> also supports <a href='http://www.bouncycastle.org/'>Bouncy Castle</a> a pure Java implementation of PGP.</p>
+    <p>By default, the <code>xsbt-gpg-plugin</code> will use the <a href='http://www.bouncycastle.org/'>Bouncy Castle</a> library, an implementation of PGP. It is a java-only solution that gives the plugin great flexibility in what it can do and how it performs it. It als works well with <code>gpg</code> command line utility, and keys generated using it. By default the PGP plugin will attempt to use your GPG key for PGP encryption. GPG is the GNU project&#8217;s PGP implementation. It provides great support and is available on many platforms.</p>
 
 <h1 id='creating_a_key_pair'>Creating a key pair</h1>
 
@@ -44,23 +44,23 @@
 
 <pre><code>gpg --gen-key</code></pre>
 
-<p>To create a key pair using the SBT plugin (and Bouncy Castle), you must first configure SBT so it knows your secret passphrase. Place your passphrase configuration into your <code>~/.sbt/gpg.sbt</code> file</p>
-
-<pre><code>gpgPassphrase := Some(Array(&#39;t&#39;,&#39;e&#39;,&#39;s&#39;,&#39;t&#39;))</code></pre>
-
-<p>or you can temporarily enter your password using SBT&#8217;s <code>set</code> command:</p>
-
-<pre><code>set gpgPassphrase := Some(Array(&#39;t&#39;,&#39;e&#39;,&#39;s&#39;,&#39;t&#39;))</code></pre>
-
-<p><em>Note: While some may want the feature to create a key without a passphrase, this plugin will not support that. The purpose of this plugin is to promote security and authentication. If you&#8217;re not using a passphrase on you&#8217;re key, you&#8217;re not helping.</em></p>
-
-<p>Next, start sbt (if not already started). In the prompt, enter the following:</p>
+<p>To create a key pair using the SBT plugin (and Bouncy Castle), In the SBT prompt, enter the following:</p>
 
 <pre><code>&gt; gpg-gen-key your@email.com Your Name Here</code></pre>
 
 <p>This will create a new public/secret key pair for you using the configured passphrase in the default location (<code>~/.sbt/gpg</code>). If you already have a key in place, this will warn you and not generate a new key.</p>
 
 <p><em>Note: If you have a GPG key pair (the <code>~/.gnupg/pubring.gpg</code> and <code>~/.gnupg/secring.gpg</code> files exist), then the GPG plugin will assume you want these and prevent you from generating a new key. You can override this by configuring your own key locations.</em></p>
+
+<p>You can record your password in a user-specific setting file:</p>
+
+<pre><code>set gpgPassphrase := Some(Array(&#39;t&#39;,&#39;e&#39;,&#39;s&#39;,&#39;t&#39;))</code></pre>
+
+<p>Or you can enter it on the command line when prompted by SBT:</p>
+
+<pre><code>Please enter your PGP passphrase&gt; ******</code></pre>
+
+<p><em>Note: While some may want the feature to create a key without a passphrase, this plugin will not support that. The purpose of this plugin is to promote security and authentication. If you&#8217;re not using a passphrase on you&#8217;re key, you&#8217;re not helping.</em></p>
 
 <h2 id='configuring_keypair_locations'>Configuring key-pair locations</h2>
 
@@ -71,6 +71,10 @@
 gpgPublicRing := file(&quot;/tmp/pubring.asc&quot;)</code></pre>
 
 <h2 id='configuring_for_using_gpg'>Configuring for using GPG</h2>
+
+<p>The first step towards using the GPG command line tool is to configure the plugin to use it.</p>
+
+<pre><code>useGpg := true</code></pre>
 
 <p>The gpg plugin needs to know where the <code>gpg</code> executable is to run. On linux/mac it will look for a <code>gpg</code> executable on the path and in windows it will look for a <code>gpg.exe</code> executable on the path. To configure a different location, place the following in your <code>~/.sbt/gpg.sbt</code> file:</p>
 
@@ -84,13 +88,21 @@ gpgPublicRing := file(&quot;/tmp/pubring.asc&quot;)</code></pre>
 
 <h2 id='avoiding_the_password_fiasco'>Avoiding the password fiasco</h2>
 
-<p>The gpg plugin assumes the use of the <code>gpg-agent</code> daemon for entering the pasphrase. Consult your OSes documentation on using the gpg-agent. If you do not want to install the gpg-agent, you can configure your passphrase in your <code>~/.sbt/gpg.sbt</code> file:</p>
+<p>The PGP plugin will ask for your password once, for every task that requires the use of the PGP signatures. The prompt will look something like this:</p>
+
+<pre><code>Please enter your PGP passphrase&gt; ***********</code></pre>
+
+<p>If you would like to avoid entering your password over and over, you can configure it with a setting:</p>
 
 <pre><code>gpgPassphrase := Some(Array(&#39;M&#39;, &#39;y&#39;, &#39;P&#39;, &#39;a&#39;, &#39;s&#39;, &#39;s&#39;, &#39;p&#39;, &#39;h&#39;, &#39;r&#39;, &#39;a&#39;, &#39;s&#39;, &#39;e&#39;))</code></pre>
 
 <p><em>Note: The passphrase <em>must</em> be an array of characters. It&#8217;s midly more secure. We hope to provide even more secure ways of storing passphrases in the future.</em></p>
 
-<p>If the passphrase is configured for the gpg plugin, then it will use the Bouncy Castle java library rather than the <code>gpg</code> command line tool.</p>   
+<p>Also make sure that the above setting is in a user-specific directory and that you don&#8217;t advertise your password in the source code repository!</p>
+
+<p>IF you are using the GPG command line tool, then the plugin supports the use of the <code>gpg-agent</code>. You can enable its usage with the following setting:</p>
+
+<pre><code>useGpgAgent := true</code></pre>   
   </div>
   <div class="span6 columns blogroll">
     <!-- TODO - links here -->
