--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <p><em>Please see <a href='usage.html'>here for advanced usage</a>.</em></p>
 
-<p>If you already have GPG configured, simply add the following to your <code>~/.sbt/plugins/project/build.scala</code> file:</p>
+<p>If you already have GPG configured, simply add the following to your <code>~/.sbt/plugins/gpg.sbt</code> file:</p>
 
 <pre><code>resolvers += Resolver.url(&quot;sbt-plugin-releases&quot;, new URL(&quot;http://scalasbt.artifactoryonline.com/scalasbt/sbt-plugin-releases/&quot;))(Resolver.ivyStylePatterns)
 
