--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 </li>
 </ul>
 
-<p><a href='usage.md'>Detailed usage and configuration instructions</a>.</p>
+<p><a href='usage.html'>Detailed usage and configuration instructions</a>.</p>
 
 <p>To publish signed artifacts, you must use the new <code>publish-signed</code> and <code>publish-local-signed</code> tasks. <code>sbt-pgp</code> no longer wires in to the default <code>publish</code> and <code>publish-local</code> tasks of SBT.</p>   
   </div>
