--- a/usage.html
+++ b/usage.html
@@ -38,7 +38,7 @@
   <div class="span10 columns content">
     <h2 id='overview'>Overview</h2>
 
-<p>This page contains detailed usage and configuration information for the <code>sbt-pgp</code> SBT plugin. For general information on the <code>sbt-pgp</code> plugin, look <a href='index.md'>here</a>.</p>
+<p>This page contains detailed usage and configuration information for the <code>sbt-pgp</code> SBT plugin. For general information on the <code>sbt-pgp</code> plugin, look <a href='index.html'>here</a>.</p>
 
 <h2 id='configuration_gpg_commandline_utility'>Configuration: GPG Command-Line Utility</h2>
 
