Change receive-key to recv-key in usage.html

--- a/usage.html
+++ b/usage.html
@@ -160,9 +160,9 @@ pgpPublicRing := file(&quot;/tmp/pubring.asc&quot;)</code></pre>
 
 <pre><code>set pgpReadOnly := false</code></pre>
 
-<p>Use the <code>receive-key</code> command to import keys.</p>
+<p>Use the <code>recv-key</code> command to import keys.</p>
 
-<pre><code>pgp-cmd receive-key &lt;key id&gt; hkp://keyserver.ubuntu.com   </code></pre>
+<pre><code>pgp-cmd recv-key &lt;key id&gt; hkp://keyserver.ubuntu.com   </code></pre>
 
 <p>Use the <code>send-key</code> command to export keys.</p>
 
