--- a/index.html
+++ b/index.html
@@ -40,29 +40,19 @@
 
 <h2 id="installation">Installation</h2>
 
+<h3 id="for-sbt-100">For sbt 1.0.0+:</h3>
+
+<p>Add the following to your <code>~/.sbt/1.0/plugins/gpg.sbt</code> file:</p>
+
+<pre><code>   addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.1.0")
+</code></pre>
+
 <h3 id="for-sbt-0135">For sbt 0.13.5+:</h3>
 
 <p>Add the following to your <code>~/.sbt/0.13/plugins/gpg.sbt</code> file:</p>
 
-<p><code>
-   addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.0.0")
-</code></p>
-
-<h3 id="for-sbt-013x">For sbt 0.13.x:</h3>
-
-<p>Add the following to your <code>~/.sbt/0.13/plugins/gpg.sbt</code> file:</p>
-
-<p><code>
-   addSbtPlugin("com.typesafe.sbt" % "sbt-pgp" % "0.8.3")
-</code></p>
-
-<h3 id="for-sbt-012x">For sbt 0.12.x:</h3>
-
-<p>Add the following to your <code>~/.sbt/plugins/gpg.sbt</code> file:</p>
-
-<p><code>
-   addSbtPlugin("com.typesafe.sbt" % "sbt-pgp" % "0.8.3")
-</code></p>
+<pre><code>   addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.1.0")
+</code></pre>
 
 <h2 id="usage">Usage</h2>
 
