--- a/usage.html
+++ b/usage.html
@@ -1,241 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>SBT PGP Plugin - Usage - </title>
-   <meta name="author" content="Josh Suereth" />
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="1; url=https://github.com/sbt/sbt-pgp#sbt-pgp">
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-   <link rel="stylesheet" href="css/syntax.css" type="text/css" />
-   <link rel="stylesheet" href="css/colors.css" type="text/css" />
-   <link rel="stylesheet" href="css/custom.css" type="text/css" />
-
-</head>
-<body>
-
-
-    <!-- Topbar
-    ================================================== -->
-    <div class="topbar" >
-      <div class="topbar-inner">
-        <div class="container">
-          <a class="brand" href="index.html">SBT PGP plugin</a>
-          <ul class="nav">
-           <li><a target="_blank" href="plugin/latest/api/index.html">Plugin Scaladoc</a></li>
-           <li><a target="_blank" href="library/latest/api/index.html">Library Scaladoc</a></li>
-           <li><a href="usage.html">Usage</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-<div class="row">
-  <div class="span2 columns"><p>&nbsp;</p></div>
-  <div class="span10 columns content">
-    <h2 id="overview">Overview</h2>
-
-<p>This page contains detailed usage and configuration information for the <code>sbt-pgp</code> SBT plugin.  For general information on the <code>sbt-pgp</code> plugin, look <a href="index.html">here</a>.</p>
-
-<h2 id="configuration-gpg-command-line-utility">Configuration: GPG Command-Line Utility</h2>
-
-<p><strong>If you’re using the built-in Bouncy Castle PGP implementation, skip this step.</strong></p>
-
-<p>The first step towards using the GPG command line tool is to make <code>sbt-pgp</code> <code>gpg</code>-aware.</p>
-
-<pre><code>useGpg := true
-</code></pre>
-
-<p><code>sbt-pgp</code> needs to know where the <code>gpg</code> executable is to run.  It will look for a either a <code>gpg</code> or <code>gpg.exe</code> executable on your <code>PATH</code> depdending on your platform.  To configure a different location, place the following in your <code>~/.sbt/gpg.sbt</code> file:</p>
-
-<pre><code>gpgCommand := "/path/to/gpg"
-</code></pre>
-
-<p>By default <code>sbt-pgp</code> will use the default private keys from the standard gpg keyrings.   If you’d like to use a different private key for signing artifacts, add the following to your <code>~/.sbt/gpg.sbt</code> file:</p>
-
-<pre><code>pgpSecretRing := file("/path/to/my/secring.gpg")
-</code></pre>
-
-<p>There is currently no way to choose a non-default key from the keyring.</p>
-
-<h1 id="creating-a-key-pair">Creating a Key Pair</h1>
-
-<p>To create a key pair, enter the following:</p>
-
-<pre><code>&gt; pgp-cmd gen-key
-</code></pre>
-
-<p>You will see something like:</p>
-
-<pre><code>Please enter the name associated with the key: LAMP/EPFL
-Please enter the email associated with the key: lamp@gmail.com
-Please enter the passphrase for the key: *****************
-Please re-enter the passphrase for the key: *****************
-[info] Creating a new PGP key, this could take a long time.
-[info] Public key := /home/jsuereth/test-secring.pgp
-[info] Secret key := /home/jsuereth/test-pubring.pgp
-[info] Please do not share your secret key.   Your public key is free to share.
-</code></pre>
-
-<p>This will create a new public/secret key pair for you using the configured passphrase in the default location (<code>~/.sbt/gpg</code>).  If you already have a key in place, this will warn you and not generate a new key.</p>
-
-<p>If you have a GPG key pair (the <code>~/.gnupg/pubring.gpg</code> and <code>~/.gnupg/secring.gpg</code> files exist), then the GPG plugin will assume you want these and prevent you from generating a new key.  You can override this by configuring your own key locations.</p>
-
-<p>Alternatively, if you’re using the <code>gpg</code> command-line utility:</p>
-
-<pre><code>gpg --gen-key
-</code></pre>
-
-<p>You can record your password in a user-specific setting file:</p>
-
-<pre><code>set pgpPassphrase := Some(Array('t','e','s','t'))
-</code></pre>
-
-<p>Or you can enter it on the command line when prompted by SBT:</p>
-
-<pre><code>Please enter your PGP passphrase&gt; ******
-</code></pre>
-
-<p>The purpose of this plugin is to promote security and authentication.  While some may want the feature to create a key without a passphrase, this plugin will not support that.</p>
-
-<h2 id="configuration-automating-passphrase-entry">Configuration: Automating Passphrase Entry</h2>
-
-<p><code>sbt-pgp</code> will ask for your password once, and cache it for the duration of the SBT process.   The prompt will look something like this:</p>
-
-<pre><code>Please enter your PGP passphrase&gt; ***********
-</code></pre>
-
-<p>If you would like to avoid entering your password over and over, you can configure it with a setting:</p>
-
-<pre><code>pgpPassphrase := Some(Array('M', 'y', 'P', 'a', 's', 's', 'p', 'h', 'r', 'a', 's', 'e'))
-</code></pre>
-
-<p>Note: The passphrase <em>must</em> be an array of characters.   It’s mildy more secure.  We hope to provide even more secure ways of storing passphrases in the future.</p>
-
-<p>Also make sure that the above setting is in a user-specific directory and that you don’t advertise your password in the source code repository!</p>
-
-<p>Another alternative for configuring the passphrase is to add it to your credentials, using a host name of <code>pgp</code>.  This allows you to globally configure a passphrase without having the pgp plugin installed globally.</p>
-
-<p>For example, create the following file <code>~/.sbt/pgp.credentials</code>:</p>
-
-<pre><code>realm=PGP Secret Key
-host=pgp
-user=sbt
-password=MyPassphrase
-</code></pre>
-
-<p>The <code>realm</code> and <code>user</code> values can be anything, the <code>host</code> must be <code>pgp</code>, and <code>password</code> must be your passphrase. Now add the this file to your sbt credentials in <code>~/.sbt/0.13/global.sbt</code>:</p>
-
-<pre><code>credentials += Credentials(Path.userHome / ".sbt" / "pgp.credentials")    
-</code></pre>
-
-<h2 id="configuration-key-pair-locations">Configuration: Key Pair Locations</h2>
-
-<p>If you’d like to use a key that isn’t in the standard location, you can configure it in your <code>~/.sbt/gpg.sbt</code> file:</p>
-
-<pre><code>pgpSecretRing := file("/tmp/secring.asc")
-
-pgpPublicRing := file("/tmp/pubring.asc")
-</code></pre>
-
-<h2 id="configuration-signing-key">Configuration: Signing Key</h2>
-
-<p>If you’d like to use a different private key besides the default, then you can configure it with the <code>pgpSigningKey</code> settings.</p>
-
-<p>You can either configure the key using raw long integer values:</p>
-
-<pre><code>pgpSigningKey := Some(9005184038412874530)
-</code></pre>
-
-<p>or you can use the <code>usePgpKeyHex</code> method.</p>
-
-<pre><code>usePgpKeyHex("7cf8d72be29df322")
-</code></pre>
-
-<p>Note:  While it is general practice to drop the higher-order bits of 64-bit integer keys when passing ids around, the PGP plugin requires the full key id currently.</p>
-
-<h2 id="configuration-public-key-ring">Configuration: Public Key Ring</h2>
-
-<p>You can configure the public key ring you use with the <code>gpgPublicRing</code> setting.</p>
-
-<pre><code>pgpPublicRing := file("/home/me/pgp/pubring.asc")
-</code></pre>
-
-<p>By default the <code>~/.gnupg/pubring.gpg</code> file is used, if it exists.</p>
-
-<h2 id="validating-pgp-keys">Validating PGP Keys</h2>
-
-<p>The plugin can be used to validate the PGP signatures of the dependencies of the project you’re using.   To validate these signatures, simply use the <code>check-pgp-signatures</code> task:</p>
-
-<pre><code>&gt; check-pgp-signatures
-[info] Resolving org.scala-lang#scala-library;2.9.1 ...
-...
-[info] ----- PGP Signature Results -----
-[info]                    com.novocode : junit-interface :        0.7 : jar   [MISSING]
-[info]               javax.transaction :             jta :     1.0.1B : jar   [MISSING]
-[info]          org.scala-lang.plugins :   continuations :      2.9.1 : jar   [MISSING]
-[info]                org.apache.derby :           derby : 10.5.3.0_1 : jar   [UNTRUSTED(0x98e21827)]
-[error] {file:/home/josh/projects/typesafe/test-signing/}test-gpg/*:check-pgp-signatures: Some artifacts have bad signatures or are signed by untrusted sources!
-[error] Total time: 2 s, completed Jan 23, 2012 12:03:28 PM
-</code></pre>
-
-<p>In the above output, the signature for derby is from an untrusted key (id: <code>0x98e21827</code>).  You can import this key into your public key ring, and then the plugin will trust artifacts from that key.   The public, by default, accepts any keys included in your public key ring file.</p>
-
-<h2 id="importing-and-exporting-keys-from-public-key-servers">Importing and Exporting Keys from Public Key Servers</h2>
-
-<p>Note: To import a key, you have to turn off read only mode:</p>
-
-<pre><code>set pgpReadOnly := false
-</code></pre>
-
-<p>Use the <code>receive-key</code> command to import keys.</p>
-
-<pre><code>pgp-cmd receive-key &lt;key id&gt; hkp://keyserver.ubuntu.com   
-</code></pre>
-
-<p>Use the <code>send-key</code> command to export keys.</p>
-
-<pre><code>pgp-cmd send-key &lt;key id&gt; hkp://keyserver.ubuntu.com
-</code></pre>
-
-<p>The value of <code>key id</code> is one of the following:</p>
-
-<ul>
-  <li>Hex Key ID</li>
-  <li>“Name” of the key (e.g. “LAMP/EPFL” in the above example)</li>
-  <li>“Email” of the key (e.g. “lamp@gmail.com” in the above example)</li>
-</ul>
-
-<h2 id="publishing-artifacts">Publishing Artifacts</h2>
-
-<p>To publish signed artifacts, use either <code>publishSigned</code> or <code>publishLocalSigned</code>.</p>
-
-<h2 id="skipping-publishing">Skipping publishing</h2>
-
-<p>To skip the publish step, set <code>skip in publish</code> to <code>true</code>.</p>
-
-<pre><code>skip in publish := true
-</code></pre>
-   
-  </div>
-  <div class="span6 columns blogroll">
-    <!-- TODO - links here -->
-  </div>
-</div>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+<script>
+  window.location.href = "https://github.com/sbt/sbt-pgp#sbt-pgp"
 </script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-5651872-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script>
-</body>
-</html>
 
+<title>Page Redirection</title>
+
+<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+If you are not redirected automatically, follow the <a href='https://github.com/sbt/sbt-pgp#sbt-pgp'>link to README</a>.
