--- a/index.html
+++ b/index.html
@@ -1,93 +1,13 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE HTML>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-<head>
-   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <title>SBT PGP Plugin - Overview - </title>
-   <meta name="author" content="Josh Suereth" />
+<meta charset="UTF-8">
+<meta http-equiv="refresh" content="1; url=https://github.com/sbt/sbt-pgp#sbt-pgp">
 
-   <!-- Homepage CSS -->
-   <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-   <link rel="stylesheet" href="css/syntax.css" type="text/css" />
-   <link rel="stylesheet" href="css/colors.css" type="text/css" />
-   <link rel="stylesheet" href="css/custom.css" type="text/css" />
-
-</head>
-<body>
-
-
-    <!-- Topbar
-    ================================================== -->
-    <div class="topbar" >
-      <div class="topbar-inner">
-        <div class="container">
-          <a class="brand" href="index.html">SBT PGP plugin</a>
-          <ul class="nav">
-           <li><a target="_blank" href="plugin/latest/api/index.html">Plugin Scaladoc</a></li>
-           <li><a target="_blank" href="library/latest/api/index.html">Library Scaladoc</a></li>
-           <li><a href="usage.html">Usage</a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-
-<div class="row">
-  <div class="span2 columns"><p>&nbsp;</p></div>
-  <div class="span10 columns content">
-    <p>The <code>sbt-pgp</code> plugin provides PGP signing for SBT 0.12+.  Some OSS repositories (e.g. Sonatype) will require that you sign artifacts with publicly available keys prior to release.  These are two of the services that <code>sbt-pgp</code> provides.</p>
-
-<h2 id="installation">Installation</h2>
-
-<h3 id="for-sbt-100">For sbt 1.0.0+:</h3>
-
-<p>Add the following to your <code>~/.sbt/1.0/plugins/gpg.sbt</code> file:</p>
-
-<pre><code>   addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.1.1")
-</code></pre>
-
-<h3 id="for-sbt-0135">For sbt 0.13.5+:</h3>
-
-<p>Add the following to your <code>~/.sbt/0.13/plugins/gpg.sbt</code> file:</p>
-
-<pre><code>   addSbtPlugin("com.jsuereth" % "sbt-pgp" % "1.1.1")
-</code></pre>
-
-<h2 id="usage">Usage</h2>
-
-<p>There are two modes of use:</p>
-
-<ul>
-  <li>
-    <p>By default, the <code>sbt-pgp</code> plugin will use the <a href="http://www.bouncycastle.org/">Bouncy Castle</a> library, an implementation of PGP that is included with the plugin.  It is a Java-only solution that gives the plugin great flexibility in what it can do and how it performs it.</p>
-  </li>
-  <li>
-    <p>The <code>gpg</code> command-line utility which is GNU’s PGP implementation.  It provides great support and is available on many platforms.  You’ll need to make sure this is installed prior to usage as this dependency is not provided.</p>
-  </li>
-</ul>
-
-<p><a href="usage.html">Detailed usage and configuration instructions</a>.</p>
-
-<p>To publish signed artifacts, you must use the new <code>publishSigned</code> and <code>publishLocalSigned</code> tasks.</p>
-
-   
-  </div>
-  <div class="span6 columns blogroll">
-    <!-- TODO - links here -->
-  </div>
-</div>
-
-<script type="text/javascript">
-var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+<script>
+  window.location.href = "https://github.com/sbt/sbt-pgp#sbt-pgp"
 </script>
-<script type="text/javascript">
-try{
-var pageTracker = _gat._getTracker("UA-5651872-1");
-pageTracker._trackPageview();
-} catch(err) {}
-</script>
-</body>
-</html>
 
+<title>Page Redirection</title>
+
+<!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+If you are not redirected automatically, follow the <a href='https://github.com/sbt/sbt-pgp#sbt-pgp'>link to README</a>.
